--- a/assets/sass/patterns/organisms/site-header.scss
+++ b/assets/sass/patterns/organisms/site-header.scss
@@ -3,6 +3,7 @@
   border-bottom: 1px solid $color-text-dividers;
   min-width: #{get-rem-from-px(275)}rem;
   position: relative;
+  z-index: 20;
 
   .search-box {
     background-color: #fff;
@@ -15,11 +16,7 @@
       top: 0;
       transition: transform 150ms;
       width: 100%;
-      z-index: -1;
-
-      &.search-box--shown {
-        z-index: 5;
-      }
+      z-index: 5;
     }
   }
 
@@ -38,6 +35,8 @@
 .site-header__title {
   float: left;
   margin: 0;
+  position: relative;
+  z-index: 21;
 }
 
 .site-header__logo_link {
@@ -65,6 +64,8 @@
 
 .site-header__navigation {
   background-color: #fff;
+  position: relative;
+  z-index: 20;
 }
 
 @media only all and (min-width: #{get-rem-from-px(550)}em) {
